# csfd

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
csfd/: asgi.py  settings.py  urls.py  wsgi.py
db/: db.sqlite3
movies/: admin.py  managers.py  models.py  services.py  urls.py  utils.py  views.py
movies/management/commands/: download_data.py
movies/migrations/: 0001_initial.py
movies/services/: __init__.py
movies/static/movies/css/: styles.css
movies/templates/movies/: base.html  creator_detail.html  index.html  movie_detail.html
movies/tests/: conftest.py  factories.py  test_models.py  test_services.py  test_utils.py  test_views.py
movies/tests/fixtures/html/: leaderboard_page_1.html  movie_detail_2294.html
