[project]
name = "csfd"
version = "0.1.0"
description = "Scrape top 300 movies from CSFD.cz under 30 seconds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "django>=5.2.4",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
