[project]
name = "csfd"
version = "0.1.0"
description = "Scrape top 300 movies from CSFD.cz under 30 seconds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "django>=5.2.4",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "black>=25.1.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-django>=4.11.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
pythonpath = "."
DJANGO_SETTINGS_MODULE = "csfd.settings"
